updates to the game text

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   </head>
 
   <body onload="startGame();">
-    <h1>Tickity Tackity Toes</h1>
-    <h2>Instruction</h2>
+    <h1>Tic Tac Toe</h1>
+    <h2>Instructions</h2>
     <ul>
       <li><span class="player1">Player</span> 1 <span class="player1">"X"</span> goes first by choosing a box</li>
       <li><span class="player2">Player</span> 2 <span class="player2">"O"</span>  will then choose a box</li>
       <li>The game continues until either no boxs are left</li>
-      <li>Or a <span class= "player">Player</span> has 3 in a row either by row, column, or diagnal</li>
+      <li>Or a <span class= "player">Player</span> has 3 in a row either by row, column, or diagnal.</li>
 
-    <div id="message">messages will go here</div>
+    <div id="message"></div>
     </ul>
           <div class= "bigBox">
               <div class="box" id= "box1" onclick= "nextMove(this);"></div>
