updates to the gameplay

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
       <h1>Tic Tac Toe</h1>
       <h3>Instructions</h3>
       <ul>
-        <li><span class="player1">Player</span> 1 <span class="player1">"X"</span> goes first by choosing a box</li>
-        <li><span class="player2">Player</span> 2 <span class="player2">"O"</span>  will then choose a box</li>
+        <li> The first player will be selected by Random</li>
+        <li> Player one will start by chosing a box</li>
+        <li> The game will switch turns and Player 2 must play</li>
         <li>The game continues until either no boxs are left</li>
-        <li>Or a <span class= "player">Player</span> has 3 in a row either by row, column, or diagnal.</li>
-        <li> <button id = "resetb" onclick= "startGame()">reset</button> </li>
+        <li>Or a Player has 3 boxs in a row either by row, column, or diagnal.</li>
+        <li> <button id = "resetb" onclick= "startGame()">Reset</button>  </li>
       </ul>
     </div>
     <div class="pull-right">
