some final updates

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <h1>Tic Tac Toe</h1>
       <h3>Instructions</h3>
       <ul>
-        <li> The first player will be selected by Random</li>
+        <li> The first player will be selected by random</li>
         <li> Player one will start by chosing a box</li>
         <li> The game will switch turns and Player 2 must play</li>
         <li>The game continues until either no boxs are left</li>
         <li>Or a Player has 3 boxs in a row either by row, column, or diagnal.</li>
-        <li> <button id = "resetb" onclick= "startGame()">Reset</button>  </li>
+        <li> <button id = "resetb" onclick= "startGame()">New Game</button>  </li>
       </ul>
     </div>
     <div class="pull-right">
